Add basic protocol stuff to main build; upgrade XNIO to 1.1.0 alpha